--- a/WebContent/css/pdetail.css
+++ b/WebContent/css/pdetail.css
@@ -84,63 +84,77 @@ a{
 /*=========main_bottom====================*/
 
 #main_bottom{
-  padding-top: 210px;
+ 	padding-top: 210px;
 }
-.top_wrapper{
-  width: 100%;
-  margin: 0;
-}
-.top_title{
-  text-align: center;
-  margin: 0;
-  height: 50px;
-  line-height: 50px;
-  background-color: #E6E6E6;
-}
-.mid{
-	height: auto;
+.product{
+	width: 950px;
+	margin: 50px auto;
+ 	height: 600px;
 }
 .img_part{
-  width: 950px;
-  text-align: center;
-  margin: 50px auto;
+	float: left;
+	margin: 0 25px;
 }
-.click{
-	cursor: pointer;
+.img_part img{
+	height: 420px;
 }
-.top_wrapper img{
-  width: 200px;
-  height: auto;
-  margin: 0 10px 10px 10px;
+.detail_info{
+	float: left;
+	display: inline-block;
+	height: 400px;
+	border-top: 2px solid #585858;
+	border-bottom: 2px solid #585858;
+	width: 550px;
+	padding: 5px;
+	margin:10px 0 0 50px;
 }
-.product_info{
-  width: 220px;
-  height: 150px;
+.product_nm{
+	font-size: 16px;
+	font-weight: bold;
+	margin: 5px 10px;
+	padding-bottom: 10px;
 }
-.product_title{
-  border-bottom: 1px solid darkgray;
-  display: inline;
-  float: left;
-  width: 100%;
-  height: auto;
-  text-align: left;
-  padding: 0 0 5px 10px;
+.product_content{
+	font-size:14px;
+	padding: 0 15px;
+	height: 130px;
+	border-bottom: 2px solid darkgray;
 }
-.product_price{
-  text-align: left;
-  padding-left: 10px;
-  font-size: 13px;
-  font-weight: bold;
+.line{
+	margin: 10px 0;
+	height: 30px;
+	line-height: 30px;
 }
-.product_detail{
-  text-align: left;
-  font-size: 12px;
-  padding: 0 10px;
+.line span:nth-child(odd){
+	width: 100px;
+	display: inline-block;
+	font-weight: bold;
 }
-.img_border{
-  display: inline-table;
-  height:auto;
+.line input{
+	width: 50px;
 }
+.button_group{
+ 	text-align: center;
+ 	margin: 30px 0;
+}
+.buy{
+ 	background-color: #424242;
+ 	color: white;
+ 	height: 40px;
+ 	width: 300px;
+}
+.cart{
+	background-color: #424242;
+ 	color: white;
+ 	height: 40px;
+ 	width: 200px;
+}
+
+
+
+
+
+
 
 /*=========side====================*/
 
