hits프런트 추가

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -143,7 +143,9 @@ a{
   display: inline-table;
   height:auto;
 }
-
+.click{
+	cursor: pointer;
+}
 /*=========side====================*/
 
 .side{
