--- a/WebContent/css/review.css
+++ b/WebContent/css/review.css
@@ -12,6 +12,11 @@ a{
   color: black;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 /*=========main_top====================*/
 
